--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,12 +25,15 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
 
       - name: build
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
         run: |
+          npm i -D @sveltejs/adapter-static
           npm run build
+          
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
