--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "./static/tsconfig.json",
+	"extends": "./src/tsconfig.json",
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
