--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install adaptive
+        run: npm i -D @sveltejs/adapter-static
+
       - name: Build
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
